Thu Jun  5 14:24:58 UTC 2014  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_aix_ibm.GNU: Add XL C++ 12.1 to the
          set of compiler versions using the settings created for V9.

Thu Jun  5 06:37:05 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Configuration.cpp:
        * ace/Connector.cpp:
        * ace/Thread_Manager.cpp:
        * ace/config-win32-msvc-14.h:
          Fixes for msvc14

        * ace/OS_NS_time.inl:
          Disable calling gmtime_s, doesn't work with ctp2014

Wed Jun  4 10:15:04 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          vc14 has removed support for /Wp64

Wed Jun  4 10:09:44 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-msvc-11.h:
        * ace/config-win32-msvc-12.h:
        * ace/config-win32-msvc-14.h:
        * ace/config-win32-msvc.h:
          Addec config files for msvc10/12/14, they just include the
          config file of the previous msvc version, makes it easier to
          add specific settings for specific msvc versions

Wed Jun  4 09:38:43 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc14nmake.mpb:
          New file for msvc14

Thu May 22 18:40:24 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Dev_Poll_Reactor.cpp:
          Fixed compile warning in single threaded build

Thu May 22 11:48:35 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Message_Queue_Test.cpp:
          Fix gcc 4.9 warning

Thu May 22 10:21:13 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_g++_common.GNU:
          Some make versions don't look to like my nested construct

Thu May 22 07:51:53 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Set ACE_HAS_CPP14 when we __cplusplus is larger than
          201103L
