@@ -1,0 +1,7 @@
+// $Id$
+#ifndef ACE_CONFIG_MACOSX_YOSEMITE_H
+#define ACE_CONFIG_MACOSX_YOSEMITE_H
+
+#include "ace/config-macosx-mavericks.h"
+
+#endif // ACE_CONFIG_MACOSX_YOSEMITE_H
